--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
                         <a id="analyse" class="nav-link" href="UserAnalysis.html">Analyse Utilisateur</a>
                     </li>
                     <li class="nav-item">
-                        <a id="input" class="nav-link" href="InputSentence.html">Input Texte</a>
+                        <a id="input" class="nav-link" href="InputSentence.php">Input Texte</a>
                     </li>
                     <li class="nav-item">
-                        <a id="graphique" class="nav-link" href="graphique.html">Graphique</a>
+                        <a id="graphique" class="nav-link" href="graphique.php">Graphique</a>
                     </li>
                     <li class="nav-item active">
-                        <a id="propos" class="nav-link" href="contact.html">A propos du Projet <span class="sr-only">(current)</span></a>
+                        <a id="propos" class="nav-link" href="contact.php">A propos du Projet <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -37,6 +37,7 @@
             <!-- Main content of the Contact page goes here -->
             <h2>Contact</h2>
             <p>Welcome to the Contact page.</p>
+            
         </div>
         <footer class="footer">
             <p>Shami THIRION SEN &copy; 2024 Projet Web Programmation</p>
