--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <a id="analyse" class="nav-link" href="UserAnalysis.html">Analyse Utilisateur</a>
                     </li>
                     <li class="nav-item">
-                        <a id="input" class="nav-link" href="InputSentence.html">Input Texte</a>
+                        <a id="input" class="nav-link" href="InputSentence.php">Input Texte</a>
                     </li>
                     <li class="nav-item">
-                        <a id="graphique" class="nav-link" href="graphique.html">Graphique</a>
+                        <a id="graphique" class="nav-link" href="graphique.php">Graphique</a>
                     </li>
                     <li class="nav-item">
                         <a id="propos" class="nav-link" href="contact.html">A propos du Projet</a>
@@ -45,7 +45,7 @@
             <!-- Main content of the home page goes here -->
         </div>
         <footer class="footer">
-            <p>Shami THIRION SEN &copy; 2024 Projet Web Programmation</p>
+            <p>Shami THIRION SEN &copy; 2024 | Projet Web Programmation</p>
         </footer>
     </div>
 </body>
