--- a/UserAnalysis.html
+++ b/UserAnalysis.html
@@ -6,8 +6,9 @@
     <title>Analyse Utilisateur - SentAnalysis Projet Final Programmation Web</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/UserAnalysis.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -26,7 +27,7 @@
                         <a id="input" class="nav-link text-white" href="InputSentence.php">Input Texte</a>
                     </li>
                     <li class="nav-item">
-                        <a id="graphique" class="nav-link text-white" href="graphique.php">Graphique</a>
+                        <a id="graphique" class="nav-link text-white" href="graphique.html">Graphique</a>
                     </li>
                     <li class="nav-item">
                         <a id="propos" class="nav-link text-white" href="contact.html">A propos du Projet</a>
