--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact - SentAnalysis Projet Final Programmation Web</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -25,7 +25,7 @@
                         <a id="input" class="nav-link text-white" href="InputSentence.php">Input Texte</a>
                     </li>
                     <li class="nav-item">
-                        <a id="graphique" class="nav-link text-white" href="graphique.php">Graphique</a>
+                        <a id="graphique" class="nav-link text-white" href="graphique.html">Graphique</a>
                     </li>
                     <li class="nav-item active">
                         <a id="propos" class="nav-link text-dark" href="contact.php">A propos du Projet <span class="sr-only">(current)</span></a>
