--- a/UserAnalysis.html
+++ b/UserAnalysis.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analyse Utilisateur - SentAnalysis Projet Final Programmation Web</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/UserAnalysis.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-</head>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Analyse Utilisateur - SentAnalysis Projet Final Programmation Web</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+        <script src="js/UserAnalysis.js"></script>
+    </head>
 <body class="user-analysis-page">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom">
@@ -33,17 +32,19 @@
                         <a id="propos" class="nav-link text-white" href="contact.html">A propos du Projet</a>
                     </li>
                 </ul>
+
                 <div class="ml-auto">
                 <form class="form-inline my-2 my-lg-0">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="showCommentForm()">Leave us a Comment</button>
                 </form>
                 </div>
+
             </div>
         </nav>
 
         <div class="content">
 
-            <div id="explainTask">
+            <div id="explainTask" >
             <h1>Analyse Utilisateur</h1>
             <p>Dans le but d'enrichir notre base de données et nos algorithmes, 
                 vous pouvez nous aider en annotant des phrases en fonction 
@@ -75,7 +76,7 @@
         <div id="currentAnnotationsContainer" style="display: none;">
             <p>Merci pour votre participation!<br/>
                 Vos annotations ont été enregistrées avec succès.
-                Voici les résultats globaux.<br/>
+                Voici les résultats pour vos phrases.<br/>
             </p>
             <div > 
                 <!-- Résultats scores globaux -->
@@ -97,13 +98,23 @@
                 <a href="InputSentence.php" class="btn btn-primary"> Input Sentence</a>
             </div>
         </div>
+        <div id="noAnnotations" style="display: none;">
+            <p>Vous n'avez pas encore annoté de phrases. 
+                <br>Veuillez cliquer sur <a href="UserAnalysis.html" >Annoter</a>
+                pour commencer.</p>
+                <a href="index.html" >Accueil</a>
+        </div>
+
            
 
-        </div>
+        
+    </div>
 
         <footer class="footer">
             <p>Shami THIRION SEN &copy; 2024 Projet Web Programmation</p>
         </footer>
+
     </div>
 </body>
+
 </html>
