--- a/graphique.html
+++ b/graphique.html
@@ -8,16 +8,23 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/index.js"></script>
 </head>
+
 <body class="graphique-page">
+    <header>
+        <h4>Statistique textuel</h4>
+    </header>
+<main>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="home" class="nav-link text-white" href="index.html">Home</a>
+                        <a id="home" class="nav-link text-white" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a id="analyse" class="nav-link text-white" href="UserAnalysis.html">Analyse Utilisateur</a>
@@ -32,13 +39,15 @@
                         <a id="propos" class="nav-link text-white" href="contact.html">A propos du Projet</a>
                     </li>
                 </ul>
+                <div class="ml-auto">
+                    <a href="php/formulaire_contact.php" class="btn btn-outline-light">Laisser nous un commentaire</a>
+                    <button id="darkModeToggle">Dark Mode</button>
+                    <button id="lightModeToggle" style="display:none">Light Mode</button>
+                </div>
             </div>
         </nav>
         <div class="content">
-            <br/><br/><br/><br/><br/>
-
         <div id="graphHeader">
-            <h2>Graphique</h2>
             <p>Bienvenu à notre page des statistique</p>
             <p>Veuillez choisir l'option statistique que vous souhaitez visualiser</p>
         </div>
@@ -46,8 +55,8 @@
         <div id="graphContent" class="d-flex justify-content-between">
             <div id="graph1" class="p-2">
                 <h3>Graphique 1</h3>
-                <p>Graphique de la distribution des sentiments par phrase</p>
-                <form action="php/graphStats.php" method="post">
+                <p>Graphique de la distribution des sentiments des phrases</p>
+                <form action="php/stats1.php" method="post">
                     <input type="submit" value="Afficher les statistiques">
                 </form>
             </div>
@@ -55,7 +64,7 @@
             <div id="graph2" class="p-2">
                 <h3>Graphique 2</h3>
                 <p>Graphique de la distribution des sentiments par phrase par journal</p>
-                <form action="php/graph2.php" method="post">
+                <form action="php/stats2.php" method="post">
                     <input type="submit" value="Afficher les statistiques">
                 </form>
             </div>
@@ -63,7 +72,7 @@
             <div id="graph3" class="p-2">
                 <h3>Graphique 3</h3>
                 <p>Graphique de la distribution des sentiments par phrase par journal</p>
-                <form action="php/tal.php" method="post">
+                <form action="php/stats3.php" method="post">
                     <input type="submit" value="Afficher les statistiques">
                 </form>
             </div>
@@ -71,9 +80,12 @@
         
 
 
-        <footer class="footer">
-            <p>Shami THIRION SEN &copy; 2024 Projet Web Programmation</p>
-        </footer>
+        
     </div>
+</main>
+<footer class="footer">
+    <p>Shami THIRION SEN &copy; 2024 Projet Web Programmation</p>
+</footer>
 </body>
+
 </html>
